<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:gravity="center_vertical">
    
    <TextView 
        android:id="@+id/labelGelete"
        android:text="@string/delete_title" 
        android:layout_width="fill_parent"		 
		android:layout_height="50dp" 
		android:textColor="#EEEEEE" 
		android:paddingLeft="12dp" 
		android:gravity="center_vertical" 
		android:background="#444444"
		android:textSize="23sp" />
    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
        android:background="#888888"
        android:layout_width="fill_parent" 
        android:layout_height="50dp" 
        android:layout_marginBottom="1dp">
        
		<TextView 
		    android:id="@+id/label" 
		    android:text="@string/select_all" 
		    android:layout_width="wrap_content"
			android:layout_height="fill_parent" 			
			android:textColor="#EEEEEE" 
			android:layout_marginLeft="12dp" 
			android:gravity="center_vertical"
			android:textSize="23sp" />
		
		<CheckBox 
		    android:id="@+id/checkAll" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="4dp"
			android:layout_marginRight="10dp" 
			android:layout_alignParentRight="true" 
			android:layout_marginTop="4dp" />
		
	</RelativeLayout>
   
  	<ListView 
  	    android:id="@+id/list" 
  	    android:layout_width="fill_parent" 
  	    android:layout_height="0dip" 
  	    android:layout_weight="1.0" 
  	    android:dividerHeight="1dip" 
  	    android:smoothScrollbar="true" 
  	    android:divider="#CCCCCC" 
  	    android:background="#FFFFFF" />
  
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#BDBDBD" > 
	    
		<Button 
		    android:id="@+id/delete" 
		    android:layout_marginTop="6dp" 
		    android:layout_marginLeft="6dp" 
		    android:layout_marginRight="6dp" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_delete" 
		    android:layout_weight="1.0" /> 
		    
		<Button 
		    android:id="@+id/cancel" 
		    android:layout_marginTop="6dp" 
		    android:layout_marginLeft="6dp" 
		    android:layout_marginRight="6dp"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_cancel" 
		    android:layout_weight="1.0"/>
	   	   
	</LinearLayout>
	
</LinearLayout>
