<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:gravity="center_vertical"
    android:background="@drawable/selector" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
    	android:layout_width="wrap_content"
    	android:layout_height="fill_parent" 
    	android:gravity="left" >
	
		<TextView 
		    android:id="@+id/TitleName" 
		    android:text="@string/type_of_alarm" 
		    android:layout_width="fill_parent" 
		    android:textColor="#333333" 
		    android:textStyle="bold"
			android:layout_height="wrap_content" 			
			android:layout_marginLeft="12dp" 
			android:layout_marginTop="8dp" 
			android:textSize="21sp" />			
			
		<TextView 
		    android:id="@+id/TypeSelected" 
		    android:text="@string/sound_and_vibration" 
		    android:layout_width="fill_parent" 
		    android:textColor="#888888" 
		    android:textStyle="bold"
		    android:layout_height="wrap_content" 		    
		    android:layout_marginLeft="14dp" 
		    android:layout_marginTop="0dp" 
		    android:layout_marginBottom="8dp" 
		    android:textSize="19sp" />
	
	</LinearLayout>
	
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" 
    	android:gravity="center_vertical|right" >	
    	
		<ImageView 
		    android:id="@+id/more"  
		    android:src="@drawable/expand_menu"
		    android:layout_width="30dp"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="2dp"
			android:layout_marginRight="10dp"
			android:contentDescription="@string/expand" 
			android:layout_marginTop="1dp" />
		
	</LinearLayout>
		
</LinearLayout>
