<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear" 
    android:orientation="horizontal"     
  	android:layout_width="fill_parent" 
  	android:background="@drawable/selector"
  	android:layout_height="fill_parent" 
  	android:gravity="center_vertical">
  
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	    android:orientation="vertical" 	    
	    android:layout_width="260dp" 
	  	android:layout_height="fill_parent" 
	  	android:gravity="left|center_vertical"> 
  
		<TextView 
		    android:id="@+id/label" 
		    android:text="@string/timer_name" 
		    android:layout_width="wrap_content" 
		    android:layout_marginTop="3dp"
			android:layout_height="wrap_content" 			
			android:textColor="#222222" 
			android:textStyle="bold" 
			android:textSize="21sp" 
			android:layout_marginLeft="12dp" /> 	
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
			android:orientation="horizontal" 
			android:layout_width="wrap_content" 
			android:layout_height="fill_parent" 
			android:gravity="left|center_vertical">
			  
			<TextView 
			    android:id="@+id/cronohours"
			    android:paddingLeft="4dp" 
			    android:paddingRight="4dp" 
			    android:paddingTop="1dp" 
			    android:paddingBottom="1dp" 
			    android:layout_width="wrap_content" 			     
			    android:text="@string/hours" 
			    android:layout_height="wrap_content" 
			    android:layout_marginTop="5dp" 
			    android:layout_marginBottom="10dp" 
			    android:layout_marginRight="0dp" 
			    android:layout_marginLeft="12dp" 
			    android:gravity="center_vertical" 
			    android:textSize="27sp" 
			    android:textColor="#FFFFFF" 
			    android:background="@drawable/timernumbers" />
			
			<TextView 
			    android:id="@+id/points1" 
			    android:layout_width="wrap_content" 			    
			    android:text="@string/separate" 
			    android:layout_height="wrap_content" 
			    android:layout_marginTop="1dp" 
			    android:layout_marginBottom="7dp" 
			    android:layout_marginRight="1dp" 
			    android:layout_marginLeft="1dp" 
			    android:gravity="center_vertical" 
			    android:textSize="21sp" 
			    android:textColor="#000000" />
			
			<TextView 
			    android:id="@+id/cronominutes"
			    android:paddingLeft="4dp" 
			    android:paddingRight="4dp" 
			    android:paddingTop="1dp" 
			    android:paddingBottom="1dp" 
			    android:layout_width="wrap_content" 			     
			    android:text="@string/minutes" 
			    android:layout_height="wrap_content" 
			    android:layout_marginTop="5dp" 
			    android:layout_marginBottom="10dp" 
			    android:layout_marginRight="0dp" 
			    android:gravity="center_vertical" 
			    android:textSize="27sp" 
			    android:textColor="#FFFFFF" 
			    android:background="@drawable/timernumbers" />
			
			<TextView 
			    android:id="@+id/points2" 
			    android:layout_width="wrap_content" 			    
			    android:text="@string/separate" 
			    android:layout_height="wrap_content"
			    android:layout_marginTop="1dp" 
			    android:layout_marginBottom="7dp" 
			    android:layout_marginRight="1dp" 
			    android:layout_marginLeft="1dp" 
			    android:gravity="center_vertical" 
			    android:textSize="21sp" 
			    android:textColor="#000000" />
			
			<TextView 
			    android:id="@+id/cronoseconds" 
			    android:paddingLeft="4dp" 
			    android:paddingRight="4dp" 
			    android:paddingTop="1dp" 
			    android:paddingBottom="1dp" 
			    android:layout_width="wrap_content" 			    
			    android:text="@string/seconds" 
			    android:layout_height="wrap_content" 
			    android:layout_marginTop="5dp" 
			    android:layout_marginBottom="10dp" 
			    android:layout_marginRight="0dp" 
			    android:gravity="center_vertical" 
			    android:textSize="27sp" 
			    android:textColor="#FFFFFF" 
			    android:background="@drawable/timernumbers" />
									
		</LinearLayout>	
	
	</LinearLayout>	
	
	<CheckBox 
	    android:id="@+id/check" 
	    android:layout_width="wrap_content" 
	    android:gravity="right"
		android:layout_height="fill_parent" 
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" 
		android:layout_marginTop="18dp"  
		android:focusable="false" />	
			
</LinearLayout>